--- a/src/filpersonal_assets/src/index.html
+++ b/src/filpersonal_assets/src/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>filpersonal</title>
+    <title>Fil Southerland</title>
     <base href="/">
 
     <link type="text/css" rel="stylesheet" href="main.css" />
 </head>
 <body>
-    <img src="logo.png" alt="DFINITY logo" />
+    
     <section>
-        <label for="name">Enter your name: &nbsp;</label>
+        <div>Fil Southerland</div>
+        <!--<label for="name">Enter your name: &nbsp;</label>
         <input id="name" alt="Name" type="text" />
-        <button id="clickMeBtn">Click Me!</button>
+        <button id="clickMeBtn">Click Me!</button>-->
     </section>
     <section id="greeting"></section>
+    <div>Hosted on Dfinity</div>
+    <img src="logo.png" alt="DFINITY logo" />
 </body>
 </html>
